--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -13,6 +13,12 @@ description: |
 grade: stable
 confinement: classic
 
+# We only ship launcher here, don't do duplicate work
+# Build on s390x architecture as the build machine is least busy
+architectures:
+- build-on: s390x
+  run-on: all
+
 parts:
   main:
     source: snap/local/launchers
