--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -12,9 +12,9 @@ grade: stable
 confinement: strict
 
 # We only ship launcher here, don't do duplicate work
-# Build on s390x architecture as the build machine is least busy
+# Build on ppc64el architecture as the build machine is least busy
 architectures:
-- build-on: s390x
+- build-on: ppc64el
   run-on: all
 
 parts:
